headline alignment for all three sizes adjusted correctly

--- a/docroot/themes/custom/cu2017/sass/custom/_base.scss
+++ b/docroot/themes/custom/cu2017/sass/custom/_base.scss
@@ -85,6 +85,8 @@ html {
 		margin-bottom: 20px;
 	}
 	.default-layout > .layout-content > [role="main"] > .main.container > .row > * > .headline		{
-		padding-left:0px;
+		@media all and (min-width: 992px){
+			padding-left:0px;
+		}
 	}
 }
